# geekbrains_home_web_arch

./: .bash_to_arch.sh  .gitignore  Antipattern.md  LICENSE  README.md  ToDo.md  client_model.py  pyproject.toml  quick_run.ini  run.py
framework/: __init__.py  framework.py
framework/error/: __init__.py  error.py
framework/fronts/: __init__.py  fronts.py
framework/logger/: logger.py
framework/types/: __init__.py  consts.py  types.py  url_tree.py
framework/utils/: __init__.py  decorators.py  get_data.py  patterns.py  reg_parser_url.py  render.py
framework/views/: __init__.py  view.py  view_type.py
simplestyle_8/: admin.html  another_page.html  base.html  category_add.html  category_form.html  contact.html  course_create.html  course_form.html  courses_add.html  courses_list.html  curse_item.html  curses.html  examples.html  footer.html  index.html  login.html  navigate.html  news.html  page.html  pre_content_news.html  profile.html  students_add.html  test.html
simplestyle_8/style/: style.css
