[tool.poetry]
name = "geekbrains-home-web-arch"
version = "0.1.0"
description = ""
authors = ["vios <i.svoboda.vios@gmail.com>"]
readme = "README.md"
packages = [{include = "geekbrains_home_web_arch"}]

[tool.poetry.dependencies]
python = "3.10.10"
uwsgi = "2.0.21"
jija = "0.1.1"

[tool.poetry.group.dev.dependencies]
pyvim = "3.0.3"
black = "23.3.0"
pynvim = "0.4.3"
neovim = "0.3.1"
ipython = "^8.12.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
